codegen/ui_tests/rhai_fn_index_getter_return.stderr
error: index getter must return a value
  --> ui_tests/rhai_fn_index_getter_return.rs:13:9
   |
13 |     pub fn test_fn(input: &mut Point, i: f32) {
   |         ^^
